Ajustes otra vex jijiji

--- a/index.html
+++ b/index.html
@@ -3,15 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="indux.css">
     <title>Document</title>
 </head>
 <body>
     <h1>Practicas</h1>
-    
+
     <ul>
     <li><a href="https://username.github.io/pweb_practica02">Projecto 1</a></li>
     <li><a href="https://username.github.io/pweb_practica03">Projecto 2</a></li>
     </ul>
+
 </body>
 </html>
 
