Ajustes otra otra vex jijiji

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <h1>Practicas</h1>
 
     <ul>
-    <li><a href="https://username.github.io/pweb_practica02">Projecto 1</a></li>
-    <li><a href="https://username.github.io/pweb_practica03">Projecto 2</a></li>
+    <li><a href="https://username.github.io/pweb_practica02">Practica 01</a></li>
+    <li><a href="https://username.github.io/pweb_practica03">Practica 02</a></li>
     </ul>
 
 </body>
